--- a/app/assets/stylesheets/pages/_about.scss
+++ b/app/assets/stylesheets/pages/_about.scss
@@ -314,6 +314,12 @@
   line-height: 30px;
 }
 
+.norm_line_height_para {
+  color: #717B8D;
+  font-size: 14px;
+  font-weight: lighter;
+}
+
 .about-button-card {
   height: 120px;
   width: 400px;
