--- a/app/views/pages/faq.html.erb
+++ b/app/views/pages/faq.html.erb
@@ -6,7 +6,7 @@
   <%= cl_image_tag("inks_little_pill_pahv4x.png", :quality=>"auto", class: "faq-pill-bottom") %>
   <h1 class="text-center black-blue zindex2 responsive-header"><%= t('faq.title') %></h1>
   <div class="space-20"></div>
-  <p class="text-center mx-auto mb-5 light-gray-thin-text responsive-text-small lh-30 zindex2 w-50-m-80"><%= t('faq.tagline') %></p>
+  <p class="text-center mx-auto mb-5 light-gray-thin-text responsive-text-small lh-30 zindex2 w-50-m-80"><%= t('faq.tagline') %> <a href="/contact"><%= t('faq.contact') %></a></p>
   <div class="space-40"></div>
   <div class="container">
     <div class="faq-card">
