--- a/app/views/pages/fxone_plus.html.erb
+++ b/app/views/pages/fxone_plus.html.erb
@@ -9,7 +9,7 @@
     <%= cl_image_tag("inks_little_pill_pahv4x.png", :quality=>"auto", class: "fxone-plus-little-pill hide-mobile") %>
       <div class="first-section-text">
         <h1 class="w-100"><span><%= cl_image_tag("fxone-logo_zjjdvc.png", class: "fxone-logo") %></span> <%= t("fxone_plus.first_section_title") %></h1>
-        <p class="paragraph-text inks-card-text"><%= t("fxone_plus.first_section_text") %></p>
+        <p class="paragraph-text"><%= t("fxone_plus.first_section_text") %><br><%= t("fxone_plus.first_section_text_two") %></p>
       </div>
       <div class="no-padding-mobile first-section-image" style="position: relative; display: flex; justify-content: center;">
         <%= cl_image_tag("fxone-plus_fvkcao.png", :quality=>"auto", class: "fxone-plus-graphic", style: "width: 100%; max-width: 800px;;") %>
