--- a/app/views/pages/fxone_standard.html.erb
+++ b/app/views/pages/fxone_standard.html.erb
@@ -268,8 +268,8 @@
       <div class="about-section" style="padding-top: 100px;">
         <div class="about-fifth-section-left mobile-center fxone-no-padding" data-aos="fade-up" data-aos-duration="2000">
           <%= image_tag 'fxone-icon-4.png', class: 'about-icon' %>
-          <h2 class="about-fifth-section-text"><%= t("fxone_remote.seventh_section_title") %></h2>
-          <p class="responsive-text-small about-fifth-section-text"><%= t("fxone_remote.seventh_section_text") %></p>
+          <h2 class="about-fifth-section-text"><%= t("fxone_standard.seventh_section_title") %></h2>
+          <p class="responsive-text-small about-fifth-section-text"><%= t("fxone_standard.seventh_section_text") %></p>
           <%= cl_image_tag("fxone-remote-graphic-4_lo5sz0.png", :quality=>"auto", class: "about-graphic about-graphic-two show-mobile") %>
         </div>
         <div class="about-fifth-section-right">
