--- a/app/views/pages/software.html.erb
+++ b/app/views/pages/software.html.erb
@@ -9,11 +9,7 @@
     <div class="first-section-text software-first-section-text">
       <div class="software-first-title">
         <h1><%= t("software.first_section_title_one") %></h1>
-        <p class="responsive-text-small no-margin-mobile p-0"><%= t("software.first_section_text_one") %></p>
-      </div>
-      <div>
-        <h1><%= t("software.first_section_title_two") %></h1>
-        <p class="responsive-text-small p-0"><%= t("software.first_section_text_two") %></p>
+        <p class="responsive-text-small no-margin-mobile p-0"><%= t("software.first_section_text_one") %>: <%= t("software.first_section_text_two") %><br><%= t("software.first_section_text_three") %><br><%= t("software.first_section_text_four") %></p>
       </div>
     </div>
     <%= cl_image_tag("software-graphic-1_elwb7o.png", class: "first-section-image show-mobile software-graphic-mobile") %>
