--- a/app/views/shared/_newsletter.html.erb
+++ b/app/views/shared/_newsletter.html.erb
@@ -1,23 +1,23 @@
 <div class="about-sixth-section-wrapper">
   <div class="container">
     <div class="about-sixth-section">
-      <div class="about-sixth-section-left">
-        <div class="about-button-card" style="background-image: url('<%= cl_image_path("Button_nqsfuo.png") %>'); position: relative;">
-          <p class="m-0"><%= t("newsletter.card_title") %></p>
-          <p class="m-0 paragraph-text"><%= t("newsletter.card_text") %></p>
-          <%= link_to jobs_path, class: "rel-link" do  %>
-          <% end %>
-        </div>
-      </div>
       <div class="about-sixth-section-right">
         <p><%= t("newsletter.title") %></p>
-        <p class="paragraph-text"><%= t("newsletter.text") %></p>
+        <p class="norm_line_height_para"><%= t("newsletter.text") %></p>
         <%= form_tag subscribe_path, method: :post, class: 'about-form' do %>
           <%= text_field_tag :email, params[:email], class: "form-control about-form-input", placeholder: "#{ t('newsletter.placeholder') }"
           %>
           <%= submit_tag "#{ t('newsletter.button') }", class: "about-form-button" %>
         <% end %>
         <p class="paragraph-text" style="font-size: 10px !important;"><%= t("newsletter.unsubscribe") %> <a href="/privacy_policy" class="privacy-link"><span style="color: #F3A300"><%= t("newsletter.privacy") %></span></a></p>
+      </div>
+      <div class="about-sixth-section-left">
+        <div class="about-button-card" style="background-image: url('<%= cl_image_path("Button_nqsfuo.png") %>'); position: relative;">
+          <p class="m-0"><%= t("newsletter.card_title") %></p>
+          <p class="m-0 norm_line_height_para"><%= t("newsletter.card_text") %></p>
+          <%= link_to jobs_path, class: "rel-link" do  %>
+          <% end %>
+        </div>
       </div>
     </div>
   </div>
