--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -128,12 +128,18 @@
   transition: top 0.5s;
   display: flex;
   align-items: center;
-  padding: 30px 60px 10px 30px;
+  padding: 30px 0px;
+  height: 95vh;
+  // overflow: scroll;
 
 
   & ul {
     list-style-type: none;
     padding: 0;
+    margin: 0 auto;
+    height: 100%;
+    width: 100%;
+    overflow: scroll;
 
     & img {
       padding-right: 20px;
@@ -148,7 +154,7 @@
   }
 
   & li {
-
+    max-width: 100%;
     & a {
       color: #7F8488;
 
@@ -172,8 +178,8 @@
 }
 
 #mobile-links .closebtn {
-  position: absolute;
-  top: 10px;
+  position: fixed;
+  top: 20px;
   right: 25px;
   font-size: 26px;
   margin-left: 50px;
@@ -190,7 +196,7 @@
 }
 
 .each-mobile-link {
-  padding-bottom: 20px;
+  padding-bottom: 10px;
   a {
     font-size: 14px;
   }
@@ -201,7 +207,7 @@
   flex-direction: column !important;
   @include for-medium-devices-down {
     width: 100%;
-    margin: 0 0 20px 35px;
+    // margin: 0 0 20px 35px;
     padding: 0;
     border-radius: 10px;
     .printers-text-container {
