--- a/app/assets/stylesheets/pages/_cost_of_ownership.scss
+++ b/app/assets/stylesheets/pages/_cost_of_ownership.scss
@@ -19,6 +19,11 @@
   padding-bottom: 50px;
 }
 
+#ownership-slider-mobile {
+  width: 90%;
+  margin: 0 auto;
+}
+
 .ownership-third-section-wrapper {
   background-color: #FFFFFF;
   display: flex;
