--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -4,9 +4,9 @@
 <%= cl_image_tag("about-big-pill-sliced_mpxusz.png", :quality=>"auto", class: "about-big-pill") %>
 <div class="about-wrapper">
   <div class="first-section fxone-first-section-background">
-    <div class="first-section-text" style="width: 400px;">
+    <div class="first-section-text">
       <h1 class="w-100"><%= t("about.second_section_title") %></h1>
-      <p class="responsive-text about-second-section-text"><%= t("about.second_section_text") %></p>
+      <p class="responsive-text"><%= t("about.second_section_text") %><br><br><%= t("about.second_section_text_two") %></p>
     </div>
     <%= cl_image_tag("about-graphic_avvw6d.png", :quality=>"auto", class: "first-section-image", style: "max-width: 800px;") %>
   </div>
@@ -20,7 +20,7 @@
         <div class="about-second-section-right mobile-center" data-aos="fade-up" data-aos-duration="2000">
           <%= image_tag 'about-icon-1.png', class: 'about-icon' %>
           <h2><%= t("about.first_section_text") %></h2>
-          <p class="responsive-text about-second-section-text"><%= t("about.first_section_text_two") %></p>
+          <p class="responsive-text"><%= t("about.first_section_text_two") %><br><br><%= t("about.first_section_text_three") %><br><br><%= t("about.first_section_text_four") %></p>
         </div>
       </div>
     </div>
