--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -3,7 +3,7 @@
     <%= link_to root_path do %>
       <%= image_tag "logo.png", alt: "Foenix Coding", class: "navbar-logo nav-left" %>
     <% end %>
-    <div class="d-flex p-3 justify-content-between" style="margin-top: 25px; width: 450px">
+    <div class="d-flex p-3 justify-content-between" style="width: 450px;">
       <div class="navbar-item hidden">
         <a href="#" role="button" id="productsDropdown" class="navbar-title nav-left" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           <%= t("navbar.products") %> <i class="fas fa-chevron-down small-chevron"></i>
